# siyuan-ai-companion

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  README_zh_CN.md  pyproject.toml  schema.sql  sonar-project.properties
.github/workflows/: build-docker-image.yaml  code-analysis.yaml
scripts/: docker-entry.sh  healthcheck.sh
src/siyuan_ai_companion/: __init__.py  app.py  asgi.py  consts.py  errors.py  tasks.py  views.py
src/siyuan_ai_companion/data/ui/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
src/siyuan_ai_companion/data/ui/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
src/siyuan_ai_companion/model/: __init__.py  note.py  note_content.py  notebook.py  rag_driver.py  siyuan_api.py  transcriber.py
src/siyuan_ai_companion/views/: __init__.py  asset.py  openai.py  ui.py  utils.py
test/integration_test/model/: test_note.py
test/unit_test/model/: test_siyuan_api.py
tests/integration_test/model/: test_siyuan_api.py
tests/unit_test/model/: test_rag_driver.py  test_siyuan_api.py
